--- a/docs/简要介绍.md
+++ b/docs/简要介绍.md
@@ -16,6 +16,8 @@
 
 最简单的做法只涉及了production(全连接)操作，并没有inner join。因此我们需要生成inner join，inner join可以看作是全连接和select(attr=attr)的组合结果。inner join的开销一定比全连接要小，所以查询优化器需要把production(全连接)改写为inner join。
 
+因为我们只考虑left-deep tree的情况，所以我们只需要对集合内元素进行全排列，每一种排列分别对应着一种join顺序。然后我们遍历所有join顺序，并按照平均分布的假设，计算出每一种join顺序对应的查询开销（即把每一步操作所需要输出的tuple数之和），取开销最小的join顺序作为我们最终选择的执行顺序。再按照这个顺序生成优化后的查询树。
+
 ![生成inner_join](./img/%E7%94%9F%E6%88%90inner_join.png)
 
 ![生成inner_join1](./img/%E7%94%9F%E6%88%90inner_join1.png)
